[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Armas/BobinaTesla/circunferencia.png" type="Texture2D" id=1]
[ext_resource path="res://Scripts/Bobina_tesla.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Armas/BobinaTesla/Explosion_blue_circle1.png" type="Texture2D" id=3]
[ext_resource path="res://Sprites/Armas/BobinaTesla/Explosion_blue_circle10.png" type="Texture2D" id=4]
[ext_resource path="res://Sprites/Armas/BobinaTesla/Explosion_blue_circle8.png" type="Texture2D" id=5]
[ext_resource path="res://Sprites/Armas/BobinaTesla/Explosion_blue_circle6.png" type="Texture2D" id=6]
[ext_resource path="res://Sounds/Bobina Tesla/TeslaFX.mp3" type="AudioStream" id=7]
[ext_resource path="res://Sprites/Armas/BobinaTesla/Explosion_blue_circle9.png" type="Texture2D" id=8]
[ext_resource path="res://Sprites/Armas/BobinaTesla/Explosion_blue_circle3.png" type="Texture2D" id=9]
[ext_resource path="res://Sprites/Armas/BobinaTesla/Explosion_blue_circle2.png" type="Texture2D" id=10]
[ext_resource path="res://Sprites/Armas/BobinaTesla/Explosion_blue_circle7.png" type="Texture2D" id=11]
[ext_resource path="res://Sprites/Armas/BobinaTesla/Explosion_blue_circle4.png" type="Texture2D" id=12]
[ext_resource path="res://Sprites/Armas/BobinaTesla/Explosion_blue_circle5.png" type="Texture2D" id=13]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 4 ) ],
"loop": true,
"name": "TeslaElectricity",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 63.1269

[node name="Bobina_tesla" type="Node2D"]
z_as_relative = false
script = ExtResource( 2 )

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
self_modulate = Color( 1, 1, 1, 0.658824 )
position = Vector2( 3, -2 )
scale = Vector2( 0.7, 0.6 )
frames = SubResource( 2 )
animation = "TeslaElectricity"
frame = 3
speed_scale = 2.0
playing = true

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color( 1, 1, 1, 0.105882 )
scale = Vector2( 0.204953, 0.221161 )
texture = ExtResource( 1 )

[node name="Rango" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rango"]
shape = SubResource( 1 )

[node name="Cooldown" type="Timer" parent="."]

[node name="ShootFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0
pitch_scale = 1.5
bus = "FX"

[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
